--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -5,6 +5,18 @@ services:
       - "8000:8000"
     environment:
       - MONGODB_URI=mongodb://root:root@mongodb:27017
+  socket-server:
+    build: ./socket-server
+    ports:
+      - "8001:8001"
+    environment:
+      - MONGODB_URI=mongodb://root:root@mongodb:27017
+  message:
+    build: ./message
+    ports:
+      - "8002:8002"
+    environment:
+      - MONGODB_URI=mongodb://root:root@mongodb:27017
   mongodb:
     image: mongodb/mongodb-community-server:6.0-ubi8
     environment:
